# investment-DEV

./: .dockerignore  .editorconfig  .env.example  .env.production  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  .vvrc  AGENTS.md  CF_DEPLOY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_COMPLETE.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MOBILE_STRATEGY.md  Makefile  NEXT.md  PRIVATE_DEPLOYMENT.md  README.md  STRUCTURE.md  TWA_VS_PWA.md  V2_FOUNDATION_ANALYSIS.md  V2_IMPLEMENTATION_GUIDE.md  auto-deploy.sh  deploy-nexus-prism.sh  deploy-render.sh  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  future.md  get_cf_url.sh  package-lock.json  (+7 more)
.github/workflows/: ci.yml  security.yml
.secrets/: r2_credentials.txt
api/: .dockerignore  main.py  models.py  requirements.txt  wrangler.toml
api-worker/: index.py
api-worker-js/: index.js
api/routers/: analysis.py  chat.py  dashboard.py  files.py  investments.py  uploads.py
api/static/: prism_docs.html
api/tests/: conftest.py  test_health.py  test_investments.py
database/: init.sql
database/migrations/: 001_add_provider_column.sql
database/seeds/: .gitkeep
docs/: README.md
docs/architecture/: overview.md
docs/development/: testing.md
mobile/android/: .gitignore  DESIGN.md  ICONS.md  README.md
mobile/android/app/: build.gradle.kts
mobile/twa/: .gitignore  DEPLOY_TWA.md  README.md  build.gradle.kts  build.sh  settings.gradle.kts
mobile/twa/app/: build.gradle.kts  proguard-rules.pro
mobile/twa/public/: assetlinks.json
nexus/mobile/: README.md
nexus/mobile/app/: build.gradle.kts  proguard-rules.pro
prism/: PERFORMANCE_OPTIMIZATIONS.md  deploy  docker-compose.yml  railway-worker.json  railway.json
prism/api/: Dockerfile  database.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  requirements.txt  storage.py
prism/api/lib/: __init__.py  financial_metrics.py  investment_comparison.py  portfolio_optimizer.py
prism/api/routers/: _imports.py  analysis.py  (+7 more)
prism/database/: init.sql
prism/scripts/: backup.py  deploy-railway.sh  railway-setup.sh
prism/vv/: cloudflare-deployer  deploy-all  ui.sh
prism/web/: .dockerignore  .env.production  Dockerfile  build_log.txt  build_output.txt  build_test.txt  eslint_out.json  index.html  lint_out.txt  lint_out2.txt  lint_output.txt  nginx.conf  package-lock.json  package.json  replace_ticker.js  tsc_fresh.txt  tsc_output.txt  vercel.json  vite.config.ts  wrangler.toml
prism/worker/: .dockerignore  Dockerfile  kimi_client.py  main.py  pytest.ini  requirements.txt  storage.py
redirect-worker/: index.js  wrangler.toml
scripts/: test_upload_flow.py
scripts/migration/: backup.sh
shared/: models.py
vv/: README.md  vv
web/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
web/public/: site.webmanifest
web/src/: App.tsx  index.css  main.tsx
worker/: ai_client.py  main.py  storage.py
(+112 files in other folders)
